--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Get or create Github release
       shell: bash
       working-directory: ${{ github.action_path }}
@@ -45,4 +45,5 @@ runs:
         INPUT_JIRA_PROJECT: ${{ inputs.jira_project }}
         INPUT_JIRA_USER: ${{ inputs.jira_user }}
         INPUT_JIRA_TOKEN: ${{ inputs.jira_token }}
+        GITHUB_REPO_NAME: ${{ github.event.repository.name }}
       run: python ./src/main.py
